--- a/Leaflet-Step-2/static/css/style.css
+++ b/Leaflet-Step-2/static/css/style.css
@@ -7,4 +7,51 @@ body {
 body,
 html {
   height: 100%;
+  background-color: black; 
+}
+
+h3,
+p {
+    text-align: center;
+    font-size: 26px;
+}
+
+.legend {
+    line-height: 18px;
+    color: black;
+    background-color:#555;
+    padding: 10px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
+.leaflet-bottom.leaflet-left {
+    width: 100%;
+}
+
+.leaflet-control-container .leaflet-timeline-controls {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.jumbotron {
+  text-align: center;
+  color:white;
+  position: relative;
+  background: #5fb962;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  overflow: hidden;
 }
