updated gitignore/added style

--- a/Leaflet-Step-2/static/css/style.css
+++ b/Leaflet-Step-2/static/css/style.css
@@ -36,6 +36,7 @@ p {
 
 .leaflet-bottom.leaflet-left {
     width: 100%;
+    font-size: 15px;
 }
 
 .leaflet-control-container .leaflet-timeline-controls {
